--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a class="nav-link" href="index.html">Inicio</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="acerca-de.html">Acerca de</a>
+        <a class="nav-link" href="Acerca-de.html">Acerca de</a>
       </li>
     </ul>
   </nav>
